--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,7 @@
 =========== Week 50 ===========
+Fri Dec 18:
+	* dual-side quads are now handled in geometry shader instead of CPU (a bit less of CPU, GPU and memory usage).
+
 Fri Dec 17:
 	* quick options done.
 	* entity position in animation clamp to max pos (caused glitch through blocks pushed by piston).
