--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,7 @@
 =========== Week 4 ===========
+Sun Jan 30:
+	* key bindings editor.
+
 Sat Jan 29:
 	* fake chunk alloc seems better now.
 	* avoid sorting alpha quads if they only are composed of a flat plane.
@@ -8,7 +11,7 @@ Fri Jan 28:
 
 Thu Jan 27:
 	* cave culling was culling too much around empty mesh.
-	* use an FBO, instead of an image2d for fog texture: imageStore() doesn't seem to work on nvidia :-/
+	* use an FBO, instead of an image2d for fog texture: can't make imageStore() work on nvidia :-/
 
 Wed Jan 26:
 	* using an image store as secondary color attachment, works but requires opengl 4.2: sigh.
