mouse lock refined

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,11 @@
+=========== Week 6 ===========
+Tue Feb 8:
+	* extended selection and mouse lock works better (full keyboard support).
+
+Mon Feb 7:
+	* lock mouse mode mostly done.
+	* debug reports from Dr Memory.
+
 =========== Week 5 ===========
 Sun Feb 6:
 	* world select integrated (finally!).
